tests/script_errors/add_overflow/error.txt
Error: 
    2 | unsigned::MAX + 1;
      | ^^^^^^^^^^^^^^^^^ The binary operation `+` caused an over- or underflow